--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-screens": "^2.15.2",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
