--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.3",
+    "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
