--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.15.2",
@@ -27,6 +28,7 @@
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
     "react-navigation-header-buttons": "^6.2.0",
+    "react-navigation-material-bottom-tabs": "^2.3.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1"
   },
