--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.7",
-    "@react-navigation/drawer": "^5.12.3",
-    "@react-navigation/stack": "^5.14.2",
+    "@react-navigation/bottom-tabs": "^5.10.0",
+    "@react-navigation/drawer": "^5.10.0",
+    "@react-navigation/stack": "^5.10.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-constants": "~9.3.3",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paer": "v4.5.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
