--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-navigation-header-buttons": "^6.2.0",
     "react-navigation-material-bottom-tabs": "^2.3.3",
     "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1"
+    "react-navigation-tabs": "^2.10.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
